[da-vinci] [h2v] [common] [schema-common] [router] [samza] [server] [controller] Fix and enable NM_CONFUSING, DMI_RANDOM_USED_ONLY_ONCE, DM_NUMBER_CTOR
RB=3068722
G=voldemort-reviewers
R=xyin,goliu,mnhuang,nithakka,smaji,jlliu,fvillega,xhao,shuhliu,zpolicze,sdwu,adietz,akozma,lcli,xnma,ssen,lelu,sumane,yurzhou
A=jlliu,fvillega